...
        }
    }
    
    private func proceedToNextQuestionOrResult() {
        if isLastQuestion() {
            statisticService.store(correct: correctAnswers, total: questionsAmount)
            let id = "Game results"
            let message = makeResultMessage()
            let alertModel = AlertModel(
                title: "Этот раунд окончен!",
                message: message,
                buttonText: "Сыграть ещё раз",
                buttonAction: { [weak self] in
...
